--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-*.*~
+*~
 *.pyc
 
 # C extensions
@@ -10,7 +10,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-env/
+#env/
 build/
 develop-eggs/
 dist/
