--- a/Arduino/platformio.ini
+++ b/Arduino/platformio.ini
@@ -11,3 +11,9 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+
+; Custom Serial Monitor port
+monitor_port = /dev/ttyUSB0
+
+; Custom Serial Monitor baud rate
+monitor_baud = 19200
